2010-01-11  Glenn Morris  <rgm@gnu.org>

	* version.el (emacs-copyright): Set copyright year to 2010.

2010-01-10  Stefan Monnier  <monnier@iro.umontreal.ca>

	* format.el (format-annotate-function): Only set
	write-region-post-annotation-function after running to-fn so as not to
	affect nested write-region calls (bug#5273).

2010-01-10  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic.el (semantic-new-buffer-setup-functions):
	Add python parser.

	* Makefile.in (ELCFILES): Add wisent/python-wy.el and
	wisent/python.el.

2010-01-10  Richard Kim  <emacs18@gmail.com>

	* cedet/semantic/wisent/python-wy.el:
	* cedet/semantic/wisent/python.el: New files.

2010-01-09  Chong Yidong  <cyd@stupidchicken.com>

	* man.el (Man-goto-section): Signal error if the section is not
	found (Bug#5317).

2010-01-09  Juanma Barranquero  <lekktu@gmail.com>

	* vc-bzr.el (vc-bzr-working-revision): On Windows and MS-DOS, accept
	URLs with a leading triple slash in the file: scheme.  (Bug#5345)

2010-01-09  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el: Don't treat compile-command as safe if
	compilation-read-command might be nil (Bug#4218).

2010-01-09  Jan Djärv  <jan.h.d@swipnet.se>

	* startup.el (command-line-1): Use orig-argi to check for ignored X and
	NS options.

2010-01-08  Kenichi Handa  <handa@m17n.org>

	* international/fontset.el (build-default-fontset-data):
	Exclude characters in scripts kana, hangul, han, or cjk-misc.

2010-01-07  Juanma Barranquero  <lekktu@gmail.com>

	* vc-dir.el (vc-dir-prepare-status-buffer): Pass a (fake) filename
	to `create-file-buffer' as it expects, not just a buffer name.
	(vc-dir-mode): Include the buffer name in `list-buffers-directory',
	to help uniquify.  (Bug#3224)

2010-01-06  Jan Djärv  <jan.h.d@swipnet.se>

	* font-setting.el (font-setting-change-default-font): Use user-spec
	instead of name.

2010-01-06  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-after-dir-status): Ignore pending merges.
